--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,7 @@
 body{
     margin:0 0;
 }
-.CARDSSPACE{
-    background-color: #f2f2f2;   
 
-}
 header{
     margin: 0 0;
     background-color: #021E42;
@@ -12,6 +9,7 @@ header{
     position: fixed;
     width: 100%;
     min-width: 270px;
+    z-index: 150;
 }
 div, h1, p{
     margin:0 0;
@@ -125,55 +123,21 @@ li{
     align-items: center;
 }
 
-@media(min-width:470px) {
-    div.logo{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10vw;
-    padding-right: 10vw;
- }
-    /*.logo{
-       
-        
-        display: flex;
-        align-items: center;
-        max-height: 230px;
 
-       justify-content: space-between;
-      padding-left: 10vw;
-    padding-right: 10vw;
-    }*/
-    .logo h1{
-        font-size: 40px;
-        
-        
-    } 
-    .logo input {
-        width: 30vw;
-        height: 38px;
-        max-width: 180px;
-
-    }
-    .logo input::-webkit-input-placeholder{
-        color:#465B75;
-    }
-    
-}
-
-@media(min-width:800px) {
-
-    .logo h1{
-        font-size: 70px;
-}
-
-}
 
 /* recuadro decontador de pokemones*/
+
+.CARDSSPACE{
+    position:absolute;
+    margin-top: 150px;
+    /*background-color: #f2f2f2;   */
+    z-index: 100;
+
+}
+
 .pokemones-quantity{ 
+    
+    position: fixed;
     margin-left: auto;
     margin-right: auto;
     align-self:baseline ;
@@ -183,7 +147,9 @@ li{
     flex-wrap: wrap;
     justify-content: space-between;
     min-width: 270px;
-    border-top: dashed 2px #337f7b;
+    /*border-top: dashed 2px #337f7b;*/
+    background-color: antiquewhite;
+    width: 100%;
 }
 .pokemones{  /*letra del contador */
     font-size: 1.5em;
@@ -194,6 +160,7 @@ li{
     font-size: 1em;
 }
 #container-card{/**CUADRO DE LA TAREJTE */
+    
     margin-left: auto;
     margin-right: auto;
     max-width: 1100px;
@@ -279,4 +246,51 @@ li{
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .4);
 	animation-name: modal;
     animation-duration: 0.5s;
+}
+
+@media(min-width:470px) {
+    div.logo{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10vw;
+    padding-right: 10vw;
+ }
+    /*.logo{
+       
+        
+        display: flex;
+        align-items: center;
+        max-height: 230px;
+
+       justify-content: space-between;
+      padding-left: 10vw;
+    padding-right: 10vw;
+    }*/
+    .logo h1{
+        font-size: 40px;
+        
+        
+    } 
+    .logo input {
+        width: 30vw;
+        height: 38px;
+        max-width: 180px;
+
+    }
+    .logo input::-webkit-input-placeholder{
+        color:#465B75;
+    }
+    
+}
+
+@media(min-width:800px) {
+
+    .logo h1{
+        font-size: 70px;
+}
+
 }
