--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,10 @@ header{
     margin: 0 0;
     background-color: #021E42;
     /* para que header no se mueva con el scroll*/
-    position: fixed;
+    position: absolute;
     width: 100%;
     min-width: 270px;
-    z-index: 150;
+    z-index: 3;
 }
 div, h1, p{
     margin:0 0;
@@ -131,45 +131,45 @@ li{
     position:absolute;
     margin-top: 150px;
     /*background-color: #f2f2f2;   */
-    z-index: 100;
+    z-index: 1;
+
 
 }
 
 .pokemones-quantity{ 
-    
-    position: fixed;
-    margin-left: auto;
-    margin-right: auto;
-    align-self:baseline ;
-    max-width:1100px;
+   
+   display: flex;
+    max-width:11px;
     padding: 0em 1em;
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     min-width: 270px;
-    /*border-top: dashed 2px #337f7b;*/
-    background-color: antiquewhite;
-    width: 100%;
+    background-color: #021E42;
+ 
 }
 .pokemones{  /*letra del contador */
    
     font-size: 1.5em;
     font-weight: bold;
+    color: #FFFDFD;
 }
 #quantity{   /*numeros del contador  */
-    color: rgb(201, 39, 11);
+    color:  #f2f398;
     font-size: 1em;
 }
 #container-card{/**CUADRO DE LA TAREJTE */
-    
+   
+
     margin-left: auto;
     margin-right: auto;
-    max-width: 1800px;
+    margin-top:67px;
+    max-width: 100%;
     padding: 1em 1em;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #f2f398;
+ 
+   
 }
 .pokemonCharts{   /*CUADRO DE LA TAREJTE */
    
@@ -196,14 +196,14 @@ li{
 }
 .poke-num{      /*como aparece el numero de ok en tarjeta */
    
-    margin:1em;
+   
     text-align: left;
     font-size: 1.2em;
   
     background-color:  #1c2166;  /*recuadro del nombre  */
     border-radius: 0.4em;   /*propiedad para hacer redondo el borde  */
     color: rgb(228, 231, 240);
-  
+    
    
  
 
@@ -227,11 +227,7 @@ li{
     height: 90px;
 
 }
-/*.poke-info {   /*tamaño de la latera de la ingo (generacion etc) 
-    font-size: 1em;
-    
-}*/
-/*arrow top flecha uqe manda hacia arriba despues de scrollear */
+
 .container-btn-top {
     position: fixed;
     bottom: 4rem;
@@ -307,17 +303,7 @@ li{
     padding-left: 10vw;
     padding-right: 10vw;
  }
-    /*.logo{
-       
-        
-        display: flex;
-        align-items: center;
-        max-height: 230px;
-
-       justify-content: space-between;
-      padding-left: 10vw;
-    padding-right: 10vw;
-    }*/
+   
     .logo h1{
         font-size: 40px;
         
@@ -340,5 +326,6 @@ li{
     .logo h1{
         font-size: 70px;
 }
+
 
 }
