--- a/src/style.css
+++ b/src/style.css
@@ -125,15 +125,13 @@ li{
 
 
 
-/* recuadro decontador de pokemones*/
+/* ------------recuadro decontador de pokemones--------*/
 
 .CARDSSPACE{
     position:absolute;
     margin-top: 150px;
     /*background-color: #f2f2f2;   */
     z-index: 1;
-
-
 }
 
 .pokemones-quantity{ 
@@ -145,22 +143,23 @@ li{
     min-width: 270px;
     background-color: #f2f398;
     padding-left: 5vw;
+
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    color: #656565;
+    font-size: 1.2em;
  
 }
 .pokemones{  /*letra del contador */
-   
-    font-size: 1.5em;
     font-weight: bold;
-    color: #656565;
+    
 }
-#quantity{   /*numeros del contador  */
-    color:  #656565;
-    font-size: 1em;
-}
+
+
+/*-------tarjetas-------------*/
 
 #container-card{/**CUADRO DE LA TAREJTE */
    
-
     margin-left: auto;
     margin-right: auto;
     margin-top:0px;
@@ -183,7 +182,7 @@ li{
 
     display:flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     border-radius: 40px;
     cursor: pointer;
 }
@@ -191,84 +190,92 @@ li{
 .RedSquare{
     display: flex;
     justify-content: center;
-    flex-direction: column;    
+    flex-direction: column;  
+      
     margin: 0;
     padding: 0;
     height: 194px;
     width: 251px;   
     border: solid 5px #ec3737;
     border-radius: 40px; 
-   
+    
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
 }
+
 .num-type{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    
+    margin-top: 10px;
 
 }
+
 .poke-num{      /*como aparece el numero de ok en tarjeta */
     text-align: left;
     font-size: 1.2em;
-    color: rgb(0, 3, 12);
+    color: #656565;
     font-weight: bolder;
+    margin-left: 15px;
   /*  display: flex;
     position: absolute;
     margin-left: 15px;
     margin-top: 15px;*/
 }
-
-
-.poke-img{     /*tamaño de la imaen de pkms en la tarejta*/
-    margin:0;
-    padding: 0;
-    height: 190px;
-    width: 245px;  
-    /*height: 120px;
-    width: auto; 
-    text-align: center; */ 
-
+.TypesPoke{
+    margin-right: 15px;
 }
 .TypesPoke img{
     width: 2.5em;
-    
-}
-.TypesPoke  {
-    width: 100%;
-    /*display: flex;
-    position: absolute;
-    margin-left: 160px;*/
-
    
 }
 
+.poke-img{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+
+
 .container-info {   /*contenedor de la info  de la tarjeta del lado derecho*/
-    width: 90%;
-    background-color:  #1c2166;  /*recuadro del nombre  */
-    border-radius: 0.4em;   /*propiedad para hacer redondo el borde  */   
-justify-content: center;
+    width: 100%;
+    
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+   
+    
 }
 
 .poke-name {     /*COMO luce el nombre el pokemon */
-    text-transform: capitalize; 
-    font-size: 1.3em;
+    
+    background-color:  #1c2166;  /*recuadro del nombre  */
+    border-radius: 0.4em;   /*propiedad para hacer redondo el borde  */ 
+    font-size: 1.1em;
     color: rgb(228, 231, 240);
-        
-   /* display: flex; 
+    width: 80%;
+    height: 1.5em;
+    font-weight: bold;    
+   /*text-transform: capitalize; 
+    display: flex; 
     justify-content:center ;
     margin-left: 50px;
     margin-top: 15px;*/
    
 }
 
+/* -------flecha---------------*/
 
 .container-btn-top {
     position: fixed;
     bottom: 4rem;
     right: 4rem;
     z-index: -83;
+    cursor: pointer;
 }
 
 .btn-top {
