--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,43 @@ li{
     align-items: center;
 }
 
+/*-----filtro por tipo-----*/
 
+.filtro{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 40px;
+    min-width: 47%;
+    border-radius: 20px;
+    border: 2px solid rgb(255, 255, 255);
+    font-size: 13px;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+   
+    
+}
+label{
+    color: #FFFFFF;
+    padding-left: 15px
+}
+.list1{
+    background-color: #FFFFFF;
+    width: 50%;
+    font-family:   Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    min-height: 40px;
+    border-radius: 0px 20px 20px 0px;
+    
+}
+
+select {
+    -webkit-border-radius: 20px;
+    -moz-border-radius:20px;
+    border-radius: 20px;
+    border-color:#021E42;
+}
 
 /* ------------recuadro decontador de pokemones--------*/
 
