--- a/src/style.css
+++ b/src/style.css
@@ -130,7 +130,7 @@ select {
 }
 .pokemonesp{  /*letra del contador */
     font-weight: bold;
-    margin-left: 30px;
+   padding-right: 30px;
     
 }
 
@@ -597,6 +597,9 @@ select {
    .pokemones-quantity{
     padding-left: 10vw;
    }
+   .pokemonesp{
+    padding-right: 13vw;
+   }
     .logo h1{
         font-size: 40px;
         
@@ -628,5 +631,7 @@ select {
     position:absolute;
     margin-top: 210px;
 }
-
+.pokemonesp{
+    padding-right: 15vw;
+   }
 }
